--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
- <p>Hello world!</p>
+ <p>Hello Erik!</p>
 <script type="text/javascript" src=""></script>
 </body>
 </html>
